ajout hyperliens persName et placeName

--- a/LC-edition-paleo-version2indexLieux.html
+++ b/LC-edition-paleo-version2indexLieux.html
@@ -5,19 +5,35 @@
    </head>
    <body>
       <h1>Première partie du roman en prose de Lancelot du
-         Lac (1301-1400) de Gauthier Map</h1><span><a href="file:/home/ubuntu/Documents/projet%20xslt/LC-edition-paleo-version2accueil.html">Retour accueil</a></span><h2>Index des lieux</h2>
+         Lac (1301-1400) de Gauthier Map</h1><span><a href="file:/home/ubuntu/Documents/projet_XSLT/LC-edition-paleo-version2accueil.html">Retour accueil</a></span><h2>Index des lieux</h2>
       <div>
          <ul>
-            <li>Ostel : ostel (§.1), hostel (§.10).</li>
-            <li>Taningues : Tan in-gues (§.10).</li>
-            <li>Saverne : Saverne (§.9).</li>
-            <li>Terre de Galehot : terre Galehot (§.9).</li>
-            <li>Terre de Slorgales : terre de Slor 
-               -gales (§.9).</li>
-            <li>Rohestot : Rohes-tot (§.7), Rohestot (§.10).</li>
-            <li>court Artus : court le
-               roy Artus (§.3), court
-               le roy Artus (§.10).</li>
+            <li><i>Ostel</i> : Lieu d'habitation d'Hélains de Taningues, où séjourne Gauvain pendant sa convalescence.
+               
+               <p> (§.1),  (§.10).</p>
+            </li>
+            <li><i>Taningues</i> : Royaume appartenant au seigneur Hélains
+               <p> (§.10).</p>
+            </li>
+            <li><i>Saverne</i> : Nom d'une rivière
+               <p> (§.9).</p>
+            </li>
+            <li><i>Terre de Galehot</i> : Le royaume du seigneur Galehot que Gauvain et son valet traversent, sous les conseils
+               d'Hélains de Taningues.
+               <p> (§.9).</p>
+            </li>
+            <li><i>Terre de Slorgales</i> : Le royaume d'un seigneur que Gauvain et son valet traversent, sous les conseils d'Hélains
+               de Taningues. De nos jours, cela correspond au nord du Pays de Galles
+               <p> (§.9).</p>
+            </li>
+            <li><i>Rohestot</i> : La dame qui vit à Rohestot est Guenièvre.
+               <p> (§.7),  (§.10).</p>
+            </li>
+            <li><i>court Artus</i> : La cour d'Arthur fait référence à la Table ronde qui est un ordre légendaire au service
+               du Roi Arthur. Elle réunit l'élite de la chevalerie en quête du Saint Graal. Lancelot
+               et Gauvain en font partie.
+               <p> (§.3),  (§.10).</p>
+            </li>
          </ul>
       </div>
    </body>
