--- a/LC-edition-paleo-version2indexPers.html
+++ b/LC-edition-paleo-version2indexPers.html
@@ -5,25 +5,46 @@
    </head>
    <body>
       <h1>Première partie du roman en prose de Lancelot du
-         Lac (1301-1400) de Gauthier Map</h1><span><a href="file:/home/ubuntu/Documents/projet%20xslt/LC-edition-paleo-version2accueil.html">Retour accueil</a></span><h2>Index des lieux</h2>
+         Lac (1301-1400) de Gauthier Map</h1><span><a href="file:/home/ubuntu/Documents/projet_XSLT/LC-edition-paleo-version2accueil.html">Retour accueil</a></span><h2>Index des personnages</h2>
       <div>
          <ul>
-            <li>la dame de Rohestot : dame
-               meismes de Rohestot (§.2), dame de Rohestot (§.8), dame de Rohestot (§.8), dame 
-               Rohestot (§.11).</li>
-            <li>ma dame : madame (§.2), ma dame (§.3), ma dame (§.6).</li>
-            <li>Gauvain : Gauvain (§.1), Gauvain (§.1), Gauvain (§.2), Gauvain (§.3), Gauvain (§.3), Gauvain (§.4), Gauvain (§.5), Gauvain (§.5), Gauvain (§.6), Gauvain (§.6), Gauvain (§.7), Gauvain (§.8), Gauvain (§.8), Gauvain (§.9), Gauvain (§.9), Gauvain (§.10).</li>
-            <li>Helains de Taningues : Halains deTaningues (§.5), Helain (§.8), Helain (§.8), Hela in (§.9), Helains (§.9), Helain (§.10), Helain (§.10).</li>
-            <li>Seour : serour (§.1).</li>
-            <li>Vallez : vallez (§.1), vallez (§.1), val 
-               -lez (§.1), val 
-               -lez (§.2), val
-               
-               -lez (§.2), vallet (§.4), vallet (§.5).</li>
-            <li>Dieu : Diey (§.2), Dieu (§.2), Dieu (§.3), Diey (§.3), Dieu (§.3), Diey (§.4), Dieu (§.7), Dieu (§.8), Dieu (§.9), Diey (§.10).</li>
-            <li>Roy Artus : roy 
-               Artus (§.2), roy Artus (§.6).</li>
-            <li>mere : mere (§.3).</li>
+            <li><i>la dame de Rohestot</i> : La dame de Rohestot est Guenièvre, l'épouse du roi Artus. Lancelot va tomber amoureux
+               d'elle
+               <p> (§.2),  (§.8),  (§.8),  (§.11).</p>
+            </li>
+            <li><i>ma dame</i> : Hélains de Taningues parle de son épouse qui lui reproche de ne pas être chevalier
+               à Gauvain dans le but de le convaincre de l'éléver à ce rang.
+               <p> (§.2),  (§.3),  (§.6).</p>
+            </li>
+            <li><i>Gauvain</i> : Gauvain est le neveu du roi Arthur. Il est l'un des chevaliers de la Table ronde.
+               Il fait d'Hélains de Taningues, un chevalier.
+               <p> (§.1),  (§.1),  (§.2),  (§.3),  (§.3),  (§.4),  (§.5),  (§.5),  (§.6),  (§.6),  (§.7),  (§.8),  (§.8),  (§.9),  (§.9),  (§.10).</p>
+            </li>
+            <li><i>Helains de Taningues</i> : Hélains de Taningues est un vassal de la dame de Rohestot. Il offre l'hospitalité
+               à Gauvain. Grâce à ce dernier, il est adoublé chevalier.
+               <p> (§.5),  (§.8),  (§.8),  (§.9),  (§.9),  (§.10),  (§.10).</p>
+            </li>
+            <li><i>Seour</i> : La soeur d'Hélains de Taningues guérit les blessures de Gauvain.
+               <p> (§.1).</p>
+            </li>
+            <li><i>Vallez</i> : Le valet accompagne Gauvain pendant son pépriple.
+               <p> (§.1),  (§.1),  (§.1),  (§.2),  (§.2),  (§.4),  (§.5).</p>
+            </li>
+            <li><i>Dieu</i> : L'Être suprême dans la chrétienneté.
+               <p> (§.2),  (§.2),  (§.3),  (§.3),  (§.3),  (§.4),  (§.7),  (§.8),  (§.9),  (§.10).</p>
+            </li>
+            <li><i>Roy Artus</i> : Selon Geoffroy de Monmouth, le roi Arthur règne sur un vaste Empire dont le royaume
+               de Bretagne fait partie. Il est le fils illégitime du roi breton Uther Pendragon et
+               Ygern. Il va être caché par Merlin.
+               Il acquière ensuite sa légitimité et devient roi des Bretons en libérant l'épée Excalibur
+               du roc qui l'emprisonne.
+               Chrétien de Troyes ajoute à la légende arturienne la quête du Saint-Graal, l'histoire
+               du Lancelot du Lac et plus généralement la romance arturienne.
+               <p> (§.2),  (§.6).</p>
+            </li>
+            <li><i>mere</i> : Parente à qui Helains de Taningues raconte son rêve.
+               <p> (§.3).</p>
+            </li>
          </ul>
       </div>
    </body>
