--- a/LC-edition-paleo-version2noticems.html
+++ b/LC-edition-paleo-version2noticems.html
@@ -6,7 +6,7 @@
    <body>
       <h1>Première partie du roman en prose de Lancelot du
          Lac (1301-1400) de Gauthier Map</h1>
-      <div><a href="file:/home/ubuntu/Documents/projet%20xslt/LC-edition-paleo-version2accueil.html">Retour accueil</a></div>
+      <div><a href="file:/home/ubuntu/Documents/projet_XSLT/LC-edition-paleo-version2accueil.html">Retour accueil</a></div>
       <h2>Notice du manucrit 16999</h2>
       <h3>L'identification :</h3>
       <dl>
@@ -46,10 +46,11 @@
          <dt><b>Foliation :</b></dt>
          <dd>291 feuillets</dd>
          <dt><b>Disposition du text :</b></dt>
-         <dd>écrit sur 3 colonnes</dd>
+         <dd>Le text est écrit sur 3 colonnes  Par conséquent, certains mots sont coupés. La coupure des mots a été rétablie (voire
+            corrigée), et indiquée par des tirets "-" dans la transcription normalisée.</dd>
          <dt><b>Décorations :</b></dt>
          <dd>miniature, initiales ornées</dd>
-         <dd>Les décorations sont davantages détaillées dans la présentation de chaque chapitre/rubrique
+         <dd>Les décorations sont davantages détaillées dans la présentation de chaque chapitre
             du manuscrit qui précède les transcriptions.</dd>
          <dt><b>Reliure :</b></dt>
          <dd>Reliure de veau brun vrac composée d'un dos à six nerfs.
