--- a/LC-edition-paleo-version2accueil.html
+++ b/LC-edition-paleo-version2accueil.html
@@ -17,12 +17,12 @@
       <div type="sommaire">
          <h2>Sommaire</h2>
          <ul>
-            <li><a href="file:/home/ubuntu/Documents/projet%20xslt/LC-edition-paleo-version2noticems.html">Notice du manucrit 16999</a></li>
-            <li><a href="file:/home/ubuntu/Documents/projet%20xslt/LC-edition-paleo-version2chap.html">CHAPITRE 56 : La Quête de Gauvain</a></li>
-            <li><a href="file:/home/ubuntu/Documents/projet%20xslt/LC-edition-paleo-version2allograph.html">La transcription allographétique</a></li>
-            <li><a href="file:/home/ubuntu/Documents/projet%20xslt/LC-edition-paleo-version2norm.html">La transcription normalisée</a></li>
-            <li><a href="file:/home/ubuntu/Documents/projet%20xslt/LC-edition-paleo-version2indexPers.html">L'index des noms de personnages</a></li>
-            <li><a href="file:/home/ubuntu/Documents/projet%20xslt/LC-edition-paleo-version2indexLieux.html">L'index de lieux</a></li>
+            <li><a href="file:/home/ubuntu/Documents/projet_XSLT/LC-edition-paleo-version2noticems.html">Notice du manucrit 16999</a></li>
+            <li><a href="file:/home/ubuntu/Documents/projet_XSLT/LC-edition-paleo-version2chap.html">CHAPITRE 56 : La Quête de Gauvain</a></li>
+            <li><a href="file:/home/ubuntu/Documents/projet_XSLT/LC-edition-paleo-version2allograph.html">La transcription allographétique</a></li>
+            <li><a href="file:/home/ubuntu/Documents/projet_XSLT/LC-edition-paleo-version2norm.html">La transcription normalisée</a></li>
+            <li><a href="file:/home/ubuntu/Documents/projet_XSLT/LC-edition-paleo-version2indexPers.html">L'index des noms de personnages</a></li>
+            <li><a href="file:/home/ubuntu/Documents/projet_XSLT/LC-edition-paleo-version2indexLieux.html">L'index de lieux</a></li>
          </ul>
       </div>
    </body>
