rangement et ajout commentaires xsl

--- a/devoir_XSLT/LC-edition-paleo-version2accueil.html
+++ b/devoir_XSLT/LC-edition-paleo-version2accueil.html
@@ -6,10 +6,10 @@
    <body>
       <h1>Première partie du roman en prose de Lancelot du
          Lac (1301-1400) de Gauthier Map</h1>
-      <p>Cette édition en ligne a été réalisée à partir du manuscrit 16999 conservé à la Bibliothèque
-         nationale de
+      <p>Cette édition en ligne a été réalisée à partir du manuscrit Français 16999 conservé
+         à la Bibliothèque nationale de
          France. Une feuille de transformation XSL a été rédigée à partir d une transcription et d
-         un encodage en XML TEI du manuscrit 16999, réalisés par Lien Céard. 
+         un encodage en XML TEI du manuscrit Français 16999, réalisés par Lien Céard. 
          Les choix éditoriaux ont été les suivants. Le terme "Chapitre" a été privilégié à
          celui de "rubrique" pour distinguer les parties du manuscrit transcrites et encodées.
          Les transcriptions ont été segmentées en paragraphes afin de faciliter la compréhension
@@ -17,12 +17,12 @@
       <div type="sommaire">
          <h2>Sommaire</h2>
          <ul>
-            <li><a href="file:/home/ubuntu/Documents/projet_XSLT/devoir_xslt/LC-edition-paleo-version2noticems.html">Notice du manucrit 16999</a></li>
-            <li><a href="file:/home/ubuntu/Documents/projet_XSLT/devoir_xslt/LC-edition-paleo-version2chap.html">CHAPITRE 56 : La Quête de Gauvain</a></li>
-            <li><a href="file:/home/ubuntu/Documents/projet_XSLT/devoir_xslt/LC-edition-paleo-version2allograph.html">La transcription allographétique</a></li>
-            <li><a href="file:/home/ubuntu/Documents/projet_XSLT/devoir_xslt/LC-edition-paleo-version2norm.html">La transcription normalisée</a></li>
-            <li><a href="file:/home/ubuntu/Documents/projet_XSLT/devoir_xslt/LC-edition-paleo-version2indexPers.html">L'index des noms de personnages</a></li>
-            <li><a href="file:/home/ubuntu/Documents/projet_XSLT/devoir_xslt/LC-edition-paleo-version2indexLieux.html">L'index de lieux</a></li>
+            <li><a href="file:/home/ubuntu/Documents/projet_XSLT/devoir_XSLT/LC-edition-paleo-version2noticems.html">Notice du manucrit Français 16999</a></li>
+            <li><a href="file:/home/ubuntu/Documents/projet_XSLT/devoir_XSLT/LC-edition-paleo-version2chap.html">CHAPITRE 56 : La Quête de Gauvain</a></li>
+            <li><a href="file:/home/ubuntu/Documents/projet_XSLT/devoir_XSLT/LC-edition-paleo-version2allograph.html">La transcription allographétique</a></li>
+            <li><a href="file:/home/ubuntu/Documents/projet_XSLT/devoir_XSLT/LC-edition-paleo-version2norm.html">La transcription normalisée</a></li>
+            <li><a href="file:/home/ubuntu/Documents/projet_XSLT/devoir_XSLT/LC-edition-paleo-version2indexPers.html">L'index des personnages</a></li>
+            <li><a href="file:/home/ubuntu/Documents/projet_XSLT/devoir_XSLT/LC-edition-paleo-version2indexLieux.html">L'index des lieux</a></li>
          </ul>
       </div>
    </body>
