--- a/devoir_XSLT/LC-edition-paleo-version2indexLieux.html
+++ b/devoir_XSLT/LC-edition-paleo-version2indexLieux.html
@@ -5,7 +5,7 @@
    </head>
    <body>
       <h1>Première partie du roman en prose de Lancelot du
-         Lac (1301-1400) de Gauthier Map</h1><span><a href="file:/home/ubuntu/Documents/projet_XSLT/devoir_XSLT/LC-edition-paleo-version2accueil.html">Retour accueil</a></span><h2>Index des lieux</h2>
+         Lac (1301-1400) de Gauthier Map</h1><span><a href="file:/home/ubuntu/Documents/projet_XSLT/Edition_lancelot_en_prose/devoir_XSLT/LC-edition-paleo-version2accueil.html">Retour accueil</a></span><h2>Index des lieux</h2>
       <div>
          <ul>
             <li><i>Ostel</i> : Lieu d'habitation d'Hélains de Taningues, où séjourne Gauvain pendant sa convalescence.
@@ -35,6 +35,9 @@
                <p> (§.3),  (§.10).</p>
             </li>
          </ul>
+      </div>
+      <div>
+         <p>§ : paragraphe</p>
       </div>
    </body>
 </html>
