--- a/devoir_XSLT/LC-edition-paleo-version2noticems.html
+++ b/devoir_XSLT/LC-edition-paleo-version2noticems.html
@@ -6,13 +6,13 @@
    <body>
       <h1>Première partie du roman en prose de Lancelot du
          Lac (1301-1400) de Gauthier Map</h1>
-      <div><a href="file:/home/ubuntu/Documents/projet_XSLT/devoir_XSLT/LC-edition-paleo-version2accueil.html">Retour accueil</a></div>
+      <div><a href="file:/home/ubuntu/Documents/projet_XSLT/Edition_lancelot_en_prose/devoir_XSLT/LC-edition-paleo-version2accueil.html">Retour accueil</a></div>
       <h2>Notice du manucrit 16999</h2>
       <h3>L'identification :</h3>
       <dl>
          <dt><b>Institution de conservation :</b></dt>
          <dd>France - Bibliothèque nationale de
-            France (Paris) Département des manuscrits</dd>
+            France (Paris)  - Département des manuscrits</dd>
          <dt><b>Cote :</b></dt>
          <dd>Français 16999</dd>
          <dt><b>Ancienne cote :</b></dt>
