ajout fichier ODD html

--- a/devoir_XSLT/LC-edition-paleo-version2indexLieux.html
+++ b/devoir_XSLT/LC-edition-paleo-version2indexLieux.html
@@ -1,6 +1,10 @@
 <html>
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+      <meta charset="UTF-8">
+      <meta name="author" content="Lien Céard">
+      <meta name="description" content="Édition numérique de la Première partie du roman en prose de Lancelot du lac">
+      <meta name="keywords" content="XSLT,XML,TEI">
       <title>Première partie du roman en prose de Lancelot du lac</title>
    </head>
    <body>
@@ -10,34 +14,43 @@
          <ul>
             <li><i>Ostel</i> : Lieu d'habitation d'Hélains de Taningues, où séjourne Gauvain pendant sa convalescence.
                
-               <p> (§.1),  (§.10).</p>
+               <p>Occurences rencontrées :
+                  ostel (§.1), hostel (§.10).</p>
             </li>
             <li><i>Taningues</i> : Royaume appartenant au seigneur Hélains
-               <p> (§.10).</p>
+               <p>Occurences rencontrées :
+                  Tan in 
+                  -gues (§.10).</p>
             </li>
             <li><i>Saverne</i> : Nom d'une rivière
-               <p> (§.9).</p>
+               <p>Occurences rencontrées :
+                  Saverne (§.9).</p>
             </li>
             <li><i>Terre de Galehot</i> : Le royaume du seigneur Galehot que Gauvain et son valet traversent, sous les conseils
                d'Hélains de Taningues.
-               <p> (§.9).</p>
+               <p>Occurences rencontrées :
+                  terre Galehot (§.9).</p>
             </li>
             <li><i>Terre de Slorgales</i> : Le royaume d'un seigneur que Gauvain et son valet traversent, sous les conseils d'Hélains
                de Taningues. De nos jours, cela correspond au nord du Pays de Galles
-               <p> (§.9).</p>
+               <p>Occurences rencontrées :
+                  terre de Slor 
+                  -gales (§.9).</p>
             </li>
             <li><i>Rohestot</i> : La dame qui vit à Rohestot est Guenièvre.
-               <p> (§.7),  (§.10).</p>
+               <p>Occurences rencontrées :
+                  Rohes 
+                  -tot (§.7), Rohestot (§.10).</p>
             </li>
             <li><i>court Artus</i> : La cour d'Arthur fait référence à la Table ronde qui est un ordre légendaire au service
                du Roi Arthur. Elle réunit l'élite de la chevalerie en quête du Saint Graal. Lancelot
                et Gauvain en font partie.
-               <p> (§.3),  (§.10).</p>
+               <p>Occurences rencontrées :
+                  court le
+                  roy Artus (§.3), court
+                  le roy Artus (§.10).</p>
             </li>
          </ul>
-      </div>
-      <div>
-         <p>§ : paragraphe</p>
       </div>
    </body>
 </html>
