--- a/devoir_XSLT/LC-edition-paleo-version2accueil.html
+++ b/devoir_XSLT/LC-edition-paleo-version2accueil.html
@@ -1,6 +1,10 @@
 <html>
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+      <meta charset="UTF-8">
+      <meta name="author" content="Lien Céard">
+      <meta name="description" content="Édition numérique de la Première partie du roman en prose de Lancelot du lac">
+      <meta name="keywords" content="XSLT,XML,TEI">
       <title>Première partie du roman en prose de Lancelot du lac</title>
    </head>
    <body>
@@ -10,10 +14,10 @@
          à la Bibliothèque nationale de
          France. Une feuille de transformation XSL a été rédigée à partir d une transcription et d
          une encodage en XML TEI du manuscrit Français 16999, réalisés par Lien Céard. 
-         Les choix éditoriaux ont été les suivants. Le terme "Chapitre" a été privilégié à
-         celui de "rubrique" pour distinguer les parties du manuscrit transcrites et encodées.
+         Les choix de transcription et d'encodage sont expliqués plus en détails dans une <a href="LC-ODD.html">ODD</a>. Le terme "Chapitre" a été privilégié à celui de "rubrique" pour distinguer les parties
+         du manuscrit transcrites et encodées.
          Les transcriptions ont été segmentées en paragraphes afin de faciliter la compréhension
-         du texte.</p>
+         du texte. </p>
       <div type="sommaire">
          <h2>Sommaire</h2>
          <ul>
