--- a/devoir_XSLT/LC-edition-paleo-version2allograph.html
+++ b/devoir_XSLT/LC-edition-paleo-version2allograph.html
@@ -1,6 +1,10 @@
 <html>
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+      <meta charset="UTF-8">
+      <meta name="author" content="Lien Céard">
+      <meta name="description" content="Édition numérique de la Première partie du roman en prose de Lancelot du lac">
+      <meta name="keywords" content="XSLT,XML,TEI">
       <title>Première partie du roman en prose de Lancelot du lac</title><script>
                         p {
                         margin-bottom: 2em; // on ajoute un espace après chaque paragraphe
