--- a/devoir_XSLT/LC-edition-paleo-version2accueil.html
+++ b/devoir_XSLT/LC-edition-paleo-version2accueil.html
@@ -14,7 +14,7 @@
          à la Bibliothèque nationale de
          France. Une feuille de transformation XSL a été rédigée à partir d une transcription et d
          une encodage en XML TEI du manuscrit Français 16999, réalisés par Lien Céard. 
-         Les choix de transcription et d'encodage sont expliqués plus en détails dans une <a href="LC-ODD.html">ODD</a>. Le terme "Chapitre" a été privilégié à celui de "rubrique" pour distinguer les parties
+         Les choix de transcription et d'encodage sont expliqués plus en détails dans une <a href="https://github.com/Lienceard/Edition_lancelot_en_prose/blob/main/devoir_XSLT/LC-ODD.html">ODD</a>. Le terme "Chapitre" a été privilégié à celui de "rubrique" pour distinguer les parties
          du manuscrit transcrites et encodées.
          Les transcriptions ont été segmentées en paragraphes afin de faciliter la compréhension
          du texte. </p>
